--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/back.js": "/js/back.js",
-    "/chart.js/chart.js": "/chart.js/chart.js"
+    "/js/back.js": "/js/back.js"
 }
