--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "braintree-web": "^3.88.1",
         "chart.js": "^3.9.1",
+        "jquery-confirm": "^3.3.4",
         "paypal-checkout": "^4.0.336",
         "qs": "^6.11.0",
         "vue-braintree": "^2.1.0",
